# project-cpp-template

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .env.example  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Config.cmake  Features.cmake  LICENSE  Options.cmake  PULL_REQUEST_TEMPLATE.md  README.adoc  Taskfile.yml  conanfile.txt  readme.md  vcpkg.json  version.txt
core/: CMakeLists.txt  Taskfile.yml  generate_certs.sh
core/async_demo/: CMakeLists.txt
core/fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
core/http_client/: CMakeLists.txt  Taskfile.yml  applicatin.yml  client.yml
core/http_client/private/include/: client_config.hpp  client_yaml.hpp  http_file_download.hpp  pch_headers.hpp  utils.hpp
core/http_client/private/src/: client_yaml.cpp  http_client_lib.cpp
core/http_client/public/: http_client_lib.h
core/http_client/test/: CMakeLists.txt  client_config_test.cpp  client_yml_test.cpp  http_client_test.cpp  mock_server.hpp  mock_yml.hpp  sum_test.cpp  test_helper.h  yaml_convert_test.cpp
core/http_client_lib/: CMakeLists.txt
core/http_client_lib/include/my_lib/: lib.hpp
core/http_client_lib/private/include/: http_file_download.hpp
core/http_client_lib/private/src/: http_client_lib.cpp
core/http_client_lib/public/: http_client_lib.h
core/http_client_lib/src/my_lib/: lib.cpp
core/http_client_lib/test/: CMakeLists.txt  http_client_test.cpp  sum_test.cpp  tests.cpp
core/http_client_lib/test/constexpr/: CMakeLists.txt
core/http_download/: CMakeLists.txt
core/http_download/include/http/: fs.hpp
core/http_download/src/: main.cpp
core/http_download/test/: CMakeLists.txt  main.cpp
core/http_file_transfer/: CMakeLists.txt
core/http_file_transfer/private/include/: constants.hpp  download.hpp  helpers.hpp  http_file_download.hpp
core/http_file_transfer/private/src/: http_file_transfer.cpp  main.cpp  mylib.cpp
core/http_file_transfer/public/: http_file_transfer.h
core/http_server/: CMakeLists.txt  Taskfile.yml  applicatin.yml  application.yml  generate_keys.sh  test.http  upload.sh
core/http_server/include/config/: logs.hpp  pch_headers.hpp  server_config.hpp  utils.hpp  yml_properties.hpp
core/http_server/include/helper/: constants.hpp  fs.hpp  helpers.hpp  human_readable.hpp  task_queue.hpp
core/http_server/include/http/: HttpServer.hpp  http_auth_handle.hpp  http_file.hpp  http_file_handle.hpp  http_handler.hpp  http_json_handle.hpp  http_request.hpp  http_server.hpp  http_web_hook.hpp  web_hook_singleton.hpp
core/http_server/include/http_server/: http_server.hpp
core/http_server/include/my_exe/: constants.hpp  helpers.hpp
core/http_server/src/: main.cpp
core/http_server/src/config/: utils.cpp  yml_properties.cpp
core/http_server/src/hash/: hash_function.cpp
core/http_server/src/http/: HttpServer.cpp  http_auth_handle.cpp  http_file.cpp  http_file_handle.cpp  http_handler.cpp  http_json_handle.cpp  http_server.cpp  http_web_hook.cpp  (+1 more)
core/http_server/test/: CMakeLists.txt  http_server_test.cpp  test_helper.h  tests.cpp  yaml_convert_test.cpp  yaml_properties_test.cpp
core/my_exe/: CMakeLists.txt  main.cpp  pch.hpp
core/my_exe/src/: main.cpp
core/my_exe/test/: CMakeLists.txt  tests.cpp
core/my_header_lib/: CMakeLists.txt
core/my_header_lib/test/: CMakeLists.txt  tests.cpp
core/my_lib/: CMakeLists.txt
core/my_lib/private/: mylib.cpp
core/my_lib/public/: mylib.h
core/my_lib/test/: CMakeLists.txt  tests.cpp
core/shared/: CMakeLists.txt  Taskfile.yml
core/shared/hash/: CMakeLists.txt
core/shared/http/: constants.hpp  helpers.hpp  http_lib_header.hpp  http_request.hpp  task_queue.hpp
core/shared/my_lib/: CMakeLists.txt
core/shared/utils/: CMakeLists.txt  fs.hpp  human_readable.hpp  logs.hpp  pch.hpp  singleton.hpp  stream_cast.hpp  types.hpp
examples/gui/: CMakeLists.txt  conanfile.txt
examples/gui/imgui/: CMakeLists.txt
examples/gui/qt/: CMakeLists.txt
examples/my_lib/: CMakeLists.txt
examples/parsers/diceParserRagel/: CMakeLists.txt  README.md  diceparser.cpp  diceparser.h  main.cpp
project/: CMakeLists.txt  app.h.in  application.rc.in  git.h.in  version.h.in
project/baselib/: CMakeLists.txt
project/baselib/include/: baselib.h
project/benchmarks/singleton/: main.cpp  singleton.hpp
project/examples/: CMakeLists.txt
project/examples/App/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
project/examples/MyLib/: CMakeLists.txt
project/examples/Qapp/: CMakeLists.txt  main.cpp
project/examples/baselib/: CMakeLists.txt
project/examples/gateway/: CMakeLists.txt
project/examples/gui/: CMakeLists.txt
project/examples/helloapp/: CMakeLists.txt
project/examples/hellolib/: CMakeLists.txt
project/examples/imgui/: CMakeLists.txt
project/helloapp/: CMakeLists.txt
project/helloapp/src/: helloapp.cpp
project/hellolib/include/: hellolib.h
project/parser-example/at-commands/: CMakeLists.txt  FindRAGEL.cmake  commands.cpp  commands.hpp
project/parser-example/buildargv/: buildargv.c
project/parser-example/config-parser/: driver.cpp
project/parser-example/diceParserRagel/: CMakeLists.txt  diceparser.cpp  diceparser.rl  diceparser_rl.cpp  main.cpp
project/parser-example/ini-parser/: ini.cc  ini.rl  test.cc
project/parser-example/inspect/: CMakeLists.txt
project/parser-example/ragel-ngx-conf/: lexer.rl
project/parser-example/ragel_redis_parser/: CMakeLists.txt  Findragel.cmake
project/parser-example/simplecalc/: lexer.cpp  parser.c
project/shared/: CMakeLists.txt
project/shared/http_parser/: CMakeLists.txt  http_parser.h  http_parser.rl
project/shared/imguizmo/: ImGuizmo.cpp  ImGuizmo.h
project/shared/parser/: CMakeLists.txt
project/shared/socket/: async_handle.hpp  data_frame.hpp  tcp_client_handle.hpp  tcp_server_handle.hpp  typedef.h  utils.hpp  uv_loop.hpp
project/shared/tray/: CMakeLists.txt  tray.h
project/shared/uri_parser/: uri_parser.c  uri_parser.h  uri_parser.rl
project/shared/utils/: CMakeLists.txt  auto_function.hpp  pch.hpp  random.hpp  singleton.hpp  types.h
(+418 files in other folders)
